<resources>
    <!--App-->
    <string name="app_name">老司机</string>
    <string name="title">老司机保我毕业</string>

    <!--HomeActivity-->
    <string name="track_success">行程记录成功</string>
    <string name="show">查看</string>
    <string name="close_drawer_content_desc">close_drawer</string>
    <string name="open_drawer_content_desc">open_drawer</string>
    <!--HomeActivity DrawerLayout-->
    <string name="menu_bluetooth">蓝牙</string>
    <string name="menu_history">历史</string>
    <string name="menu_settings">设置</string>
    <!--HomeActivity Menu-->
    <string name="menu_enable_sensor_log">开启传感器日志</string>
    <string name="menu_disable_sensor_log">关闭传感器日志</string>

    <!--RecordActivity Menu-->
    <string name="menu_clear_all">清空</string>

    <!--BluetoothActivity-->
    <string name="header_paired_device">已匹配设备</string>
    <string name="header_found_device">可用设备</string>
    <string name="header_bluetooth_setting">蓝牙设置</string>
    <string name="setting_auto_connect_last_paired_device">自动连接上次配对设备</string>

    <!--DisplayActivity-->
    <string name="menu_enable_scroll">启用滑动</string>
    <string name="menu_disable_scroll">禁止滑动</string>
    <string name="menu_display_merge">合并</string>
    <string name="menu_display_split">拆分</string>
    <!--bottom sheet mark-->
    <string name="header_mark_as">Mark As</string>
    <string name="title_pattern">模式</string>
    <string name="menu_mark">Mark</string>
</resources>
