<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:theme="@style/TitleBar"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"
            app:popupTheme="@style/Popup"
            app:title="@string/title"
            />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/title_blue_setting"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height_one_line"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/content_space_horizontal"
                android:paddingRight="@dimen/content_space_horizontal"
                android:text="@string/header_bluetooth_setting"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/text_secondary"
                />

            <LinearLayout
                android:id="@+id/switch_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height_one_line"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/content_space_horizontal"
                android:paddingRight="@dimen/content_space_horizontal"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/content_space_horizontal"
                    android:drawableStart="@drawable/ic_bluetooth_connected"
                    android:gravity="center_vertical"
                    android:text="@string/setting_auto_connect_last_paired_device"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/text_primary"
                    />

                <android.support.v4.widget.Space
                    android:layout_width="@dimen/content_space_horizontal"
                    android:layout_height="wrap_content"
                    />

                <Switch
                    android:id="@+id/auto_connect_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/title_paired_devices"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height_one_line"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/content_space_horizontal"
                android:paddingRight="@dimen/content_space_horizontal"
                android:text="@string/header_paired_device"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/text_secondary"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/paired_devices_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_bluetooth"
                />

            <LinearLayout
                android:id="@+id/title_found"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height_one_line"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/content_space_horizontal"
                android:paddingRight="@dimen/content_space_horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/header_found_device"
                    android:textColor="@color/text_secondary"
                    android:textSize="@dimen/text_secondary"
                    />

                <android.support.v4.widget.Space
                    android:layout_width="8dp"
                    android:layout_height="0dp"
                    />

                <ProgressBar
                    android:id="@+id/search_progress"
                    style="@style/Base.Widget.AppCompat.ProgressBar"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    />
            </LinearLayout>

            <com.littlechoc.olddriver.ui.view.RecyclerViewEx
                android:id="@+id/found_devices_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_bluetooth"
                />

            <com.littlechoc.olddriver.ui.view.EmptyView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/search_bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/content_space_horizontal"
        android:src="@drawable/ic_refresh"
        app:layout_anchor="@id/container"
        app:layout_anchorGravity="bottom|right"
        />

</android.support.design.widget.CoordinatorLayout>